--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="collapse" id="navbarToggleExternalContent">
                         <div class="bg-dark p-4">
                         <h5 class="text-white h4">Menu</h5>
-                            <ul class="text-white">
+                            <ul class="mobile-menu">
                                 <li>
                                     <a href="index.html"><i class="fa-solid fa-house"></i>Home</a>
                                 </li>
@@ -81,14 +81,14 @@
     <footer>
         <div class="container">
             <div class="row contact-links">
-                <div class="col-sm-12 col-md-auto col-lg-3 f-col">
+                <div class="col-sm-12 col-md-auto col-lg-3 d-block d-sm-block d-md-none d-lg-block">
                     <h4>Business Info</h4>
                     <div>
                         <p>info@fiberactive.com</p>
                         <address class="address">30 Accordion Lane, Old Castle, NP19 8HL</address>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-auto col-lg-6">
+                <div class="col-sm-12 col-md-12 col-lg-6">
                     <h4>Social & Contact</h4>
                     <div class="social-links">
                         <a href="#" class="fa-brands fa-facebook"></a>
@@ -100,10 +100,18 @@
                         <button type="button" href="#" class="btn btn-outline">Contact</button>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-auto col-lg-3">
+                <div class="col-sm-12 col-md-6 col-lg-3">
                     <h4>Developer Details</h4>
                     <a href="#" class="fa-brands fa-github"></a>
                     <p class="developer-name">Melany Howell</p>
+                </div>
+                <!--only visible on medium screen break points-->
+                <div class="col-sm-12 col-md-6 col-lg-3 d-none d-sm-none d-md-block d-lg-none">
+                    <h4>Business Info</h4>
+                    <div>
+                        <p>info@fiberactive.com</p>
+                        <address class="address">30 Accordion Lane, Old Castle, NP19 8HL</address>
+                    </div>
                 </div>
             </div>
         </div>
