sorting overlap issues with header and footer

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     </ul> 
                 </nav>
                 <!--Mobile Menu for screens smaller than md-->
-                <div class="d-block d-sm-block d-md-none d-lg-none">
+                <div class="d-block d-sm-block d-md-none d-lg-none mobile-menu">
                     <div class="collapse" id="navbarToggleExternalContent">
                         <div class="bg-dark p-4">
-                        <h5 class="text-white h4">Menu</h5>
-                            <ul class="mobile-menu">
+                        <h5 class="text-white h4"></h5>
+                            <ul>
                                 <li>
                                     <a href="index.html"><i class="fa-solid fa-house"></i>Home</a>
                                 </li>
@@ -91,10 +91,10 @@
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h4>Social & Contact</h4>
                     <div class="social-links">
-                        <a href="#" class="fa-brands fa-facebook"></a>
-                        <a href="#" class="fa-brands fa-twitter"></a>
-                        <a href="#" class="fa-brands fa-instagram"></a>
-                        <a href="#" class="fa-brands fa-youtube"></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
                         <button type="button" href="#" class="btn btn-outline">Contact</button>
@@ -102,7 +102,8 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <h4>Developer Details</h4>
-                    <a href="#" class="fa-brands fa-github"></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <p class="developer-name">Melany Howell</p>
                 </div>
                 <!--only visible on medium screen break points-->
