--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <div class="row align-items-center">
-            <a class="col-md-4 logo" href="index.html">
+            <a class="col-xs-12 col-sm-12 col-md-4 col-lg-4 logo" href="index.html">
                 <h2>Fiber Active</h2>
             </a>
             <div class="col-md-8">
