Adding hero image and details

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     </header>
     <section>
         <br>
-        <div>
-
+        <div id="business-image">
+            <p>We are dediacted to makeing our fabric as comfortable for the planet as it is for you</p>
+            <button>What's so special?</button>
         </div>
         <br>
         <div>
@@ -72,10 +73,6 @@
         <br>
         <div>
             Area 2
-        </div>
-        <br>
-        <div>
-            Area 3
         </div>
         <br>
     </section>
