Add middle text and image

--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
             <button>What's so special?</button>
         </div>
         <br>
-        <div>
-            Area 1
+        <div class="row fab-description">
+            <div class="col-lg-7 col-md-12 col-sm-12">
+                <p class="history">We have been in the textiles manufacturing business for over 20 years, dedicated to creating the best quality fabric we can for our customers, with a speciality in being one of the leading eco friendly textile manufacturers.</p>
+            </div>
+            <div class="col-lg-5 col-md-12 col-sm-12">
+                <img class="descrip-image" src="../assets/images/sewingmachinesm.jpg">
+            </div>
         </div>
         <br>
         <div>
