--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <nav class="d-none d-md-block">
                     <ul id="menu">
                         <li>
-                            <a href="#"><i class="fa-solid fa-comment"></i>Contact</a>
+                            <a href="contact.html"><i class="fa-solid fa-comment"></i>Contact</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-shirt"></i>Product</a>
+                            <a href="product.html"><i class="fa-solid fa-shirt"></i>Product</a>
                         </li>
                         <li>
-                            <a class="active" href="#"><i class="fa-solid fa-house"></i>Home</a>
+                            <a class="active" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
                         </li>
                     </ul> 
                 </nav>
@@ -44,7 +44,7 @@
                                     <a href="product.html"><i class="fa-solid fa-shirt"></i>Product</a>    
                                 </li>
                                 <li>
-                                    <a href="product.html"><i class="fa-solid fa-comment"></i>Contact</a>
+                                    <a href="contact.html"><i class="fa-solid fa-comment"></i>Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -100,7 +100,7 @@
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
-                        <button type="button" href="#" class="btn btn-outline">Contact</button>
+                        <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
