--- a/product.html
+++ b/product.html
@@ -21,13 +21,13 @@
                 <nav class="d-none d-md-block">
                     <ul id="menu">
                         <li>
-                            <a href="#"><i class="fa-solid fa-comment"></i>Contact</a>
+                            <a href="contact.html"><i class="fa-solid fa-comment"></i>Contact</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-shirt"></i>Product</a>
+                            <a href="product.html"><i class="fa-solid fa-shirt"></i>Product</a>
                         </li>
                         <li>
-                            <a class="active" href="#"><i class="fa-solid fa-house"></i>Home</a>
+                            <a class="active" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
                         </li>
                     </ul> 
                 </nav>
@@ -44,7 +44,7 @@
                                     <a href="product.html"><i class="fa-solid fa-shirt"></i>Product</a>    
                                 </li>
                                 <li>
-                                    <a href="product.html"><i class="fa-solid fa-comment"></i>Contact</a>
+                                    <a href="contact.html"><i class="fa-solid fa-comment"></i>Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -62,20 +62,17 @@
     </header>
     <section>
         <br>
-        <div>
-
-        </div>
-        <br>
-        <div>
-            Area 1
-        </div>
-        <br>
-        <div>
-            Area 2
-        </div>
-        <br>
-        <div>
-            Area 3
+        <h3>Our Materials</h3>
+        <div class="row text-align-center">
+            <div class="col-sm-12 col-md-5 col-lg-4">
+                Image
+            </div>
+            <div class="col-sm-12 col-md-7 col-lg-5">
+                Description
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-3">
+                button
+            </div>
         </div>
         <br>
     </section>
@@ -98,7 +95,7 @@
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
-                        <button type="button" href="#" class="btn btn-outline">Contact</button>
+                        <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
