--- a/product.html
+++ b/product.html
@@ -65,13 +65,14 @@
         <h3>Our Materials</h3>
         <div class="row text-align-center">
             <div class="col-sm-12 col-md-5 col-lg-4">
-                Image
+                <img src="assets/images/knitting-rangesm.jpg">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5">
-                Description
+                <h5>Organic Wool Range</h5>
+                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-3">
-                button
+                <button>Enquire Now</button>
             </div>
         </div>
         <br>
