adding in pre-form text

--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,10 @@
     <section>
         <br>
         <div>
-
-        </div>
-        <br>
-        <div>
-            Area 1
+            <h5>Contact Us</h5>
+            <p>If you are interested in contacting us about any of our product ranegs or have any questions, we'd love for you to get in touch with us.
+                Please allow us 1-2 working days to get back to you so we can give you the best service possible.
+            </p>
         </div>
         <br>
     </section>
