adding rough form structure for name, email and text

--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,31 @@
                 Please allow us 1-2 working days to get back to you so we can give you the best service possible.
             </p>
         </div>
+        <div>
+            <form action="https://formdump.codeinstitute.net" method="POST">
+                <fieldset>
+                    <legend>Your Details</legend>
+                    <div>
+                        <label for="name-field">Name</label>
+                        <input id="name-field" type="text" name="full_name" placeholder="Your name" required>
+                    </div>
+                    <div>
+                        <label for="email-field">Email</label>
+                        <input id="email-field" type="email" name="email" placeholder="Your email" required>
+                    </div>
+                    <fieldset>
+                        <br>
+                        <legend>Your Message</legend>
+                        <label for="feedback">What do you want to ask us?</label>
+                        <br>
+                        <textarea id="feedback" rows="4" cols="87" name="feedback"></textarea>
+                    </fieldset>
+                    <button type="submit">
+                        <strong>Submit</strong>
+                    </button>
+                    <input type="reset" value="Reset Form">
+                </form>
+        </div>
         <br>
     </section>
     <footer>
