--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
-                        <button type="button" href="#" class="btn btn-outline">Contact</button>
+                        <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
