--- a/product.html
+++ b/product.html
@@ -63,9 +63,21 @@
     <section>
         <br>
         <h3>Our Materials</h3>
-        <div class="row text-align-center">
+        <div class="row text-align-center wool-range">
             <div class="col-sm-12 col-md-5 col-lg-4">
                 <img src="assets/images/knitting-rangesm.jpg">
+            </div>
+            <div class="col-sm-12 col-md-7 col-lg-5">
+                <h5>Organic Wool Range</h5>
+                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-3">
+                <button>Enquire Now</button>
+            </div>
+        </div>
+        <div class="row text-align-center material-range">
+            <div class="col-sm-12 col-md-5 col-lg-4">
+                <img src="assets/images/material-samplessm.jpg">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5">
                 <h5>Organic Wool Range</h5>
