Arrange position of products

--- a/product.html
+++ b/product.html
@@ -63,30 +63,48 @@
     <section>
         <br>
         <h3>Our Materials</h3>
-        <div class="row text-align-center wool-range">
-            <div class="col-sm-12 col-md-5 col-lg-4">
-                <img src="assets/images/knitting-rangesm.jpg">
+        <div class="row wool-range">
+            <div class="col-sm-12 col-md-5 col-lg-4 wool-image">
             </div>
-            <div class="col-sm-12 col-md-7 col-lg-5">
+            <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+                <div class="d-none d-sm-none d-md-block d-lg-none">
+                    <button href="contact.html">Enquire Now</button>
+                </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-3">
-                <button>Enquire Now</button>
+            <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
+                <button href="contact.html">Enquire Now</button>
             </div>
         </div>
-        <div class="row text-align-center material-range">
-            <div class="col-sm-12 col-md-5 col-lg-4">
-                <img src="assets/images/material-samplessm.jpg">
+        <div class="row text-align-center linen-range">
+            <div class="col-sm-12 col-md-5 col-lg-4 linen-image">
             </div>
-            <div class="col-sm-12 col-md-7 col-lg-5">
+            <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+                <div class="d-sm-none d-md-block d-lg-none">
+                    <button href="contact.html">Enquire Now</button>
+                </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-3">
-                <button>Enquire Now</button>
+            <div class="col-sm-12 col-md-12 col-lg-3 d-sm-block d-md-none d-lg-block enquire-btn">
+                <button href="contact.html">Enquire Now</button>
             </div>
         </div>
+        <div class="row text-align-center faux-leather-range">
+            <div class="col-sm-12 col-md-5 col-lg-4 leather-image">
+            </div>
+            <div class="col-sm-12 col-md-7 col-lg-5 product-description">
+                <h5>Organic Wool Range</h5>
+                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+                <div class="d-sm-none d-md-block d-lg-none">
+                    <button href="contact.html">Enquire Now</button>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-3 d-sm-block d-md-none d-lg-block enquire-btn">
+                <button href="contact.html">Enquire Now</button>
+            </div>
+        </div>  
         <br>
     </section>
     <footer>
