enquiry button styled

--- a/product.html
+++ b/product.html
@@ -70,41 +70,41 @@
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
-                    <button href="contact.html">Enquire Now</button>
+                    <button class="enquiry" href="contact.html">Enquire Now</button>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
-                <button href="contact.html">Enquire Now</button>
+                <button class="enquiry" href="contact.html">Enquire Now</button>
             </div>
         </div>
-        <div class="row text-align-center linen-range">
+        <div class="row linen-range">
             <div class="col-sm-12 col-md-5 col-lg-4 linen-image">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
-                <div class="d-sm-none d-md-block d-lg-none">
-                    <button href="contact.html">Enquire Now</button>
+                <div class="d-none d-sm-none d-md-block d-lg-none">
+                    <button class="enquiry" href="contact.html">Enquire Now</button>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-3 d-sm-block d-md-none d-lg-block enquire-btn">
-                <button href="contact.html">Enquire Now</button>
+            <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
+                <button class="enquiry" href="contact.html">Enquire Now</button>
             </div>
         </div>
-        <div class="row text-align-center faux-leather-range">
+        <div class="row faux-leather-range">
             <div class="col-sm-12 col-md-5 col-lg-4 leather-image">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
-                <div class="d-sm-none d-md-block d-lg-none">
-                    <button href="contact.html">Enquire Now</button>
+                <div class="d-none d-sm-none d-md-block d-lg-none">
+                    <button class="enquiry" href="contact.html">Enquire Now</button>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-3 d-sm-block d-md-none d-lg-block enquire-btn">
-                <button href="contact.html">Enquire Now</button>
+            <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
+                <button class="enquiry" href="contact.html">Enquire Now</button>
             </div>
-        </div>  
+        </div> 
         <br>
     </section>
     <footer>
