add social links

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
                 <nav class="d-none d-md-block">
                     <ul id="menu">
                         <li>
-                            <a href="#"><i class="fa-solid fa-comment"></i>Contact</a>
+                            <a href="contact.html"><i class="fa-solid fa-comment"></i>Contact</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-shirt"></i>Product</a>
+                            <a href="product.html"><i class="fa-solid fa-shirt"></i>Product</a>
                         </li>
                         <li>
-                            <a class="active" href="#"><i class="fa-solid fa-house"></i>Home</a>
+                            <a class="active" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
                         </li>
                     </ul> 
                 </nav>
@@ -80,7 +80,7 @@
                     <textarea class="form-control" placeholder="Please add you message here" id="MessageBox" rows="6"></textarea>
                 </div>
                 <div>
-                    <button type="submit">
+                    <button class="submit-button" type="submit">
                         <strong>Submit</strong>
                     </button>
                     <input type="reset" value="Reset Form">
@@ -103,10 +103,10 @@
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h4>Social & Contact</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
                         <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
@@ -114,8 +114,8 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <h4>Developer Details</h4>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/melanyhowell?tab=repositories"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://gb.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                     <p class="developer-name">Melany Howell</p>
                 </div>
                 <!--only visible on medium screen break points-->
