--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
     <section>
         <br>
         <div id="business-image">
-            <p>We are dediacted to makeing our fabric as comfortable for the planet as it is for you</p>
-            <button>What's so special?</button>
+            <div id="home-text">
+                <p><strong>We are dediacted to making our fabric as comfortable for the planet as it is for you</strong></p>
+                <button>What's so special?</button>
+            </div>
         </div>
         <br>
         <div class="row fab-description">
-            <div class="col-lg-7 col-md-12 col-sm-12">
-                <p class="history">We have been in the textiles manufacturing business for over 20 years, dedicated to creating the best quality fabric we can for our customers, with a speciality in being one of the leading eco friendly textile manufacturers.</p>
+            <div class="col-lg-7 col-md-12 col-sm-12 history">
+                <p>We have been in the textiles manufacturing business for over 20 years, dedicated to creating the best quality fabric we can for our customers, with a speciality in being one of the leading eco friendly textile manufacturers.</p>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12">
                 <img class="descrip-image" src="../assets/images/sewingmachinesm.jpg">
@@ -90,10 +92,10 @@
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h4>Social & Contact</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
                         <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
@@ -101,8 +103,8 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <h4>Developer Details</h4>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/melanyhowell?tab=repositories"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://gb.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                     <p class="developer-name">Melany Howell</p>
                 </div>
                 <!--only visible on medium screen break points-->
