--- a/product.html
+++ b/product.html
@@ -120,10 +120,10 @@
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h4>Social & Contact</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
                         <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
@@ -131,8 +131,8 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <h4>Developer Details</h4>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/melanyhowell?tab=repositories"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://gb.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                     <p class="developer-name">Melany Howell</p>
                 </div>
                 <!--only visible on medium screen break points-->
