tidy up of format for html and css

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </header>
     <section>
         <br>
+        <!--main image for home page-->
         <div id="business-image">
             <div id="home-text">
                 <p><strong>We are dediacted to making our fabric as comfortable for the planet as it is for you</strong></p>
