--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <p>We have been in the textiles manufacturing business for over 20 years, dedicated to creating the best quality fabric we can for our customers, with a speciality in being one of the leading eco friendly textile manufacturers.</p>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12">
-                <img class="descrip-image" src="../assets/images/sewingmachinesm.jpg">
+                <div id="descrip-image">
+                </div>
             </div>
         </div>
         <br>
