replace home button with anchor to make home page compliant

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="business-image">
             <div id="home-text">
                 <p><strong>We are dediacted to making our fabric as comfortable for the planet as it is for you</strong></p>
-                <button>What's so special?</button>
+                <a class="description-link" href="../Project1-draft/product.html">What's so special?</a>
             </div>
         </div>
         <br>
