change of buttons to anchors to help page become more compliant

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="business-image">
             <div id="home-text">
                 <p><strong>We are dediacted to making our fabric as comfortable for the planet as it is for you</strong></p>
-                <a class="description-link" href="../Project1-draft/product.html">What's so special?</a>
+                <a class="body-link" href="../Project1-draft/product.html">What's so special?</a>
             </div>
         </div>
         <br>
@@ -99,7 +99,7 @@
                         <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
-                        <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
+                        <a href="contact.html" class="footer-button">Contact</a>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
