--- a/product.html
+++ b/product.html
@@ -70,11 +70,11 @@
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
-                    <button class="enquiry" href="contact.html">Enquire Now</button>
+                    <a class="body-link" href="contact.html">Enquire Now</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
-                <button class="enquiry" href="contact.html">Enquire Now</button>
+                <a class="body-link" href="contact.html">Enquire Now</a>
             </div>
         </div>
         <div class="row linen-range">
@@ -84,11 +84,11 @@
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
-                    <button class="enquiry" href="contact.html">Enquire Now</button>
+                    <a class="body-link" href="contact.html">Enquire Now</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
-                <button class="enquiry" href="contact.html">Enquire Now</button>
+                <a class="body-link" href="contact.html">Enquire Now</a>
             </div>
         </div>
         <div class="row faux-leather-range">
@@ -98,11 +98,11 @@
                 <h5>Organic Wool Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
-                    <button class="enquiry" href="contact.html">Enquire Now</button>
+                    <a class="body-link" href="contact.html">Enquire Now</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-3 d-block d-sm-block d-md-none d-lg-block enquire-btn">
-                <button class="enquiry" href="contact.html">Enquire Now</button>
+                <a class="body-link" href="contact.html">Enquire Now</a>
             </div>
         </div> 
         <br>
