update on error hit Section lacking heading using div as heading not required

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>    
     </header>
     <section>
-        <br>
+        <div></div>
         <!--main image for home page-->
         <div id="business-image">
             <div id="home-text">
