added space between header and hero image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>    
     </header>
     <section>
-        <div></div>
+        <div class="home-page-space"></div>
         <!--main image for home page-->
         <div id="business-image">
             <div id="home-text">
