resolving button on product page

--- a/product.html
+++ b/product.html
@@ -126,7 +126,7 @@
                         <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                     <div>
-                        <button type="button" href="contact.html" class="btn btn-outline">Contact</button>
+                        <a href="contact.html" class="footer-button">Contact</a>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
