--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,7 @@
                 <!--Mobile Menu for screens smaller than md-->
                 <div class="d-block d-sm-block d-md-none d-lg-none mobile-menu">
                     <div class="collapse" id="navbarToggleExternalContent">
-                        <div class="bg-dark p-4">
-                        <h5 class="text-white h4"></h5>
+                        <div class="bg-dark p-4 h4">
                             <ul>
                                 <li>
                                     <a href="index.html"><i class="fa-solid fa-house"></i>Home</a>
