change of description for Wool

--- a/product.html
+++ b/product.html
@@ -61,13 +61,14 @@
     </header>
     <section>
         <br>
+        <!--Had to adapt the enquiry link so it could be seen below the description when change=ing screen sizes-->
         <h3>Our Materials</h3>
         <div class="row wool-range">
             <div class="col-sm-12 col-md-5 col-lg-4 wool-image">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Organic Wool Range</h5>
-                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product. This Organic wool has been hand spun and naturally treated with all natural dyes to ensure that the quality of the wool is not comprimised. using natural products like peat from scotland to provide various purple and yellow yarns. Please make note of the batch numbers if you order more than one item as we can not guarantee an exact colour match if bought seperatley due to the natural ingredients used.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
                     <a class="body-link" href="contact.html">Enquire Now</a>
                 </div>
@@ -80,7 +81,7 @@
             <div class="col-sm-12 col-md-5 col-lg-4 linen-image">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
-                <h5>Organic Wool Range</h5>
+                <h5>Linen Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
                     <a class="body-link" href="contact.html">Enquire Now</a>
@@ -94,7 +95,7 @@
             <div class="col-sm-12 col-md-5 col-lg-4 leather-image">
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
-                <h5>Organic Wool Range</h5>
+                <h5>Faux Leather Range</h5>
                 <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
                     <a class="body-link" href="contact.html">Enquire Now</a>
