Altered descriptions of products

--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,7 @@
             </p>
             <div class="g-3">
             <form method="get" action="formdestination.html">
+                <!--Inspiration from github for different sections of the form-->
                 <div class="name">
                  <input type="text" class="form-control" placeholder="First name" aria-label="First name" required>
                 </div>
