--- a/product.html
+++ b/product.html
@@ -82,7 +82,7 @@
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Linen Range</h5>
-                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+                <p>Our Linen Range is one of our most versatile product being used in everyting from kitchenware, clothing to tents, ask us about our water proofing features- all natural of course that have out lasted all our ocmpetitors in independant testing.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
                     <a class="body-link" href="contact.html">Enquire Now</a>
                 </div>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-sm-12 col-md-7 col-lg-5 product-description">
                 <h5>Faux Leather Range</h5>
-                <p>Our Wool Range is organic and treated with all natural products to make it easy to handle and meld into your desired product.</p>
+                <p> Our Faux Leather range is one of the greatest advances in textile technology to date, our faux leather is made from vegetable and fruit skins, is extremly hard wearing can be use on clothes, shoes, upholstery and pratically anything genuine leather can be used with without the hevay environmental cost.</p>
                 <div class="d-none d-sm-none d-md-block d-lg-none">
                     <a class="body-link" href="contact.html">Enquire Now</a>
                 </div>
